--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -20,6 +20,7 @@ layer(base);
   --color-black: #121723;
   --color-dark: #1d2430;
   --color-primary: #0056ad;
+  --color-blue: #007bff;
   --color-yellow: #fbb040;
   --color-bg-color-dark: #171c28;
 
